--- a/component/content.tex
+++ b/component/content.tex
@@ -3,13 +3,13 @@
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
 \input{cv/summary.tex}
-%\input{cv/education.tex}
-%\input{cv/experience.tex}
-%\input{cv/projects.tex}
-%\input{cv/skills.tex}
-%\input{cv/achievements.tex}
-%\input{cv/interests.tex}
-%\input{cv/languages.tex}
+\input{cv/education.tex}
+\input{cv/experience.tex}
+\input{cv/projects.tex}
+\input{cv/skills.tex}
+\input{cv/achievements.tex}
+\input{cv/interests.tex}
+\input{cv/languages.tex}
 
 \vspace*{\fill}
 \centering{\textbf{References available upon request.}}
